Updated spec
