# jaxrs-spec-generated/src/main/java/fi/metatavu/metamind/rest/model/TrainingMaterial.java
@@ -19,6 +19,7 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 
 public class TrainingMaterial   {
   private @Valid UUID id = null;
+  private @Valid TrainingMaterialType type = null;
   private @Valid UUID storyId = null;
   private @Valid String text = null;
   private @Valid String name = null;
@@ -42,6 +43,24 @@ public class TrainingMaterial   {
   }
   public void setId(UUID id) {
     this.id = id;
+  }
+
+  /**
+   **/
+  public TrainingMaterial type(TrainingMaterialType type) {
+    this.type = type;
+    return this;
+  }
+
+  
+  //@ApiModelProperty(value = "")
+  @JsonProperty("type")
+
+  public TrainingMaterialType getType() {
+    return type;
+  }
+  public void setType(TrainingMaterialType type) {
+    this.type = type;
   }
 
   /**
@@ -149,6 +168,7 @@ public class TrainingMaterial   {
     }
     TrainingMaterial trainingMaterial = (TrainingMaterial) o;
     return Objects.equals(id, trainingMaterial.id) &&
+        Objects.equals(type, trainingMaterial.type) &&
         Objects.equals(storyId, trainingMaterial.storyId) &&
         Objects.equals(text, trainingMaterial.text) &&
         Objects.equals(name, trainingMaterial.name) &&
@@ -158,7 +178,7 @@ public class TrainingMaterial   {
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, storyId, text, name, createdAt, modifiedAt);
+    return Objects.hash(id, type, storyId, text, name, createdAt, modifiedAt);
   }
 
   @Override
@@ -167,6 +187,7 @@ public class TrainingMaterial   {
     sb.append("class TrainingMaterial {\n");
     
     sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    type: ").append(toIndentedString(type)).append("\n");
     sb.append("    storyId: ").append(toIndentedString(storyId)).append("\n");
     sb.append("    text: ").append(toIndentedString(text)).append("\n");
     sb.append("    name: ").append(toIndentedString(name)).append("\n");
